Changed README file in static-pages branch of sample-app.

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# Ruby on Rails Tutorial: sample application
+# Ruby on Rails Tutorial: sample application (this README modified in the static-pages branch)
 
 This is the sample application for
 [*Ruby on Rails Tutorial: Learn Rails by Example*](http://railstutorial.org/)
